--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,38 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+jspm_packages/
 /.pnp
 .pnp.js
+
+# dotenv environment variables file
+.env
+.env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # testing
 /coverage
 
 # production
 /build
+/dist
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Optional npm cache directory
+.npm
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Optional eslint cache
+.eslintcache
+
+# Yarn Integrity file
+.yarn-integrity
