--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "core-js": "3"
+    "core-js": "3",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0"
   },
   "browserslist": [
     "> 1%",
