--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@material/slider": "^5.1.0",
     "core-js": "3",
     "dotenv": "^8.2.0",
-    "dotenv-webpack": "^1.7.0",
-    "material-components-web": "^5.1.0"
+    "dotenv-webpack": "^1.7.0"
   },
   "browserslist": [
     "> 1%",
