--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@material/slider": "^5.1.0",
     "core-js": "3",
     "dotenv": "^8.2.0",
-    "dotenv-webpack": "^1.7.0"
+    "dotenv-webpack": "^1.7.0",
+    "hammerjs": "^2.0.8"
   },
   "browserslist": [
     "> 1%",
