--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@material/slider": "^5.1.0",
+    "@material/tab-bar": "^5.1.0",
     "core-js": "3",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
+    "embla-carousel": "^2.8.1",
     "hammerjs": "^2.0.8"
   },
   "browserslist": [
