--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "NOME_DO_PROJETO",
+  "name": "helltaker-player",
   "version": "1.0.0",
-  "description": "DESCRIÇÃO_DO_PROJETO",
+  "description": "A Helltaker song rendered using the Browser Web Audio API to draw simple and beautiful Wave Forms together HTML5 Canvas Engine",
   "main": "index.js",
   "scripts": {
     "dev": "parcel public/index.html --out-dir development -p 3000",
-    "build": "parcel build public/index.html --out-dir dist --public-url ./"
+    "build": "parcel build public/index.html --out-dir dist --public-url /helltaker-player"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/LaksCastro/NOME_DO_REPOSITÓRIO.git"
+    "url": "https://github.com/LaksCastro/helltaker-player.git"
   },
   "keywords": [
-    "KEYWORDS",
-    "DO",
-    "PROJETO"
+    "hell",
+    "taker",
+    "helltaker",
+    "vip",
+    "song",
+    "wave",
+    "form",
+    "real",
+    "time"
   ],
   "author": "Laks Castro",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/LaksCastro/NOME_DO_REPOSITÓRIO/issues"
+    "url": "https://github.com/LaksCastro/helltaker-player/issues"
   },
-  "homepage": "https://github.com/LaksCastro/NOME_DO_REPOSITÓRIO/#readme",
+  "homepage": "https://lakscastro.github.io/helltaker-player",
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-runtime": "^7.9.0",
