--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/runtime-corejs2": "^7.9.2",
+    "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4",
-    "sass": "^1.26.3"
+    "sass": "^1.26.3",
+    "typescript": "^3.9.7"
   }
 }
