--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "parcel-bundler": "^1.12.4",
     "sass": "^1.26.3",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "ethereal-color": "^0.0.5"
   }
 }
