--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel public/index.html --out-dir development -p 3000",
-    "build": "parcel build public/index.html --out-dir dist --public-url /helltaker-player"
+    "build": "parcel build public/index.html --out-dir dist --public-url /helltaker-player",
+    "deploy": "node publish.js"
   },
   "repository": {
     "type": "git",
